# convert-to-md

./: Cargo.toml  Dockerfile  LICENSE  README.ja.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: convert.sh
src/: cli.rs  lib.rs  main.rs  walker.rs
src/converter/: csv_convert.rs  docx.rs  html.rs  image.rs  json.rs  mod.rs  pdf.rs  plain_text.rs  pptx.rs  xlsx.rs  xml.rs  zip_convert.rs
tests/: integration_test.rs
tests/fixtures/: sample.csv  sample.html
