[package]
name = "convert-to-md-rs"
version = "0.1.0"
edition = "2021"
authors = ["howlrs <sharebook.amazon@gmail.com>"]
description = "Convert office documents, PDFs, images, and more to Markdown"
license = "MIT"
repository = "https://github.com/howlrs/convert-to-md"
keywords = ["markdown", "converter", "pdf", "docx", "office"]

[[bin]]
name = "convert-to-md-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
zip = "0.6"
quick-xml = "0.36"
calamine = "0.24"
csv = "1"
htmd = "0.1"
anyhow = "1"
rayon = "1"
colored = "2"
serde_json = "1"
kamadak-exif = "0.5"

[profile.release]
lto = true
opt-level = "z"
strip = true
